force-app/main/default/objects/Form_Builder_Settings__c/Form_Builder_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Feature toggles for Form Builder - controls which features are enabled at org, profile, or user level</description>
    <label>Form Builder Settings</label>
</CustomObject>