force-app/main/default/objects/Form_Builder_Settings__c/fields/C_Enable_Asset_Repository__c.field-meta.xml
<CustomField>
    <fullName>C_Enable_Asset_Repository__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Question/Section repository toolbox items and publish actions in Form Builder.</description>
    <label>Enable Asset Repository</label>
    <type>Checkbox</type>
</CustomField>