force-app/main/default/objects/Form_Builder_Settings__c/fields/C_Enable_Character_Countdown__c.field-meta.xml
<CustomField>
    <fullName>C_Enable_Character_Countdown__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, Text and Long Text questions with Max Length show a live count (e.g. 12 / 100) while typing; the limit is still enforced the same way. If unchecked or no hierarchy row applies to this user, the counter stays off (default).</inlineHelpText>
    <label>Enable Character Countdown</label>
    <type>Checkbox</type>
</CustomField>