force-app/main/default/objects/Form_Builder_Settings__c/fields/C_Enable_Cross_Field_Validation__c.field-meta.xml
<CustomField>
    <fullName>C_Enable_Cross_Field_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Cross Field Validation</label>
    <type>Checkbox</type>
</CustomField>