force-app/main/default/objects/Form_Builder_Settings__c/fields/C_Enable_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>C_Enable_Field_Mapping__c</fullName>
    <description
  >Enables Field Mapping authoring in Form Builder (Form Targets and per-question mappings). When unchecked, mapping UI is hidden; FieldMappingService still runs on submit only when response records are enabled. Defaults to true.</description>
    <defaultValue>true</defaultValue>
    <label>Enable Field Mapping</label>
    <type>Checkbox</type>
</CustomField>