force-app/main/default/objects/Form_Builder_Settings__c/fields/C_Enable_Layout_Modes__c.field-meta.xml
<CustomField>
    <fullName>C_Enable_Layout_Modes__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Enables alternate layout modes (wizard, conversational, card-based) in Form Builder and at runtime. When unchecked, the Config layout picker is hidden in the visual builder and forms render using the classic layout regardless of C_Layout_Mode__c. Defaults to false (disabled).</description>
    <label>Enable Layout Modes</label>
    <type>Checkbox</type>
</CustomField>