force-app/main/default/objects/Form_Builder_Settings__c/fields/C_Enable_Response_Records__c.field-meta.xml
<CustomField>
    <fullName>C_Enable_Response_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, normalized Section Response and Question Response records are created upon form submission, and ScoringService and FieldMappingService run against them. When disabled, the submission is recorded but no response records, scoring, or outbound field mappings are produced (both services read from the response records and would otherwise silently write 0 / no outbound rows).</description>
    <inlineHelpText>Enable to persist Section/Question Response records and run scoring + outbound field mapping. Disabling skips all three.</inlineHelpText>
    <label>Enable Response Records</label>
    <type>Checkbox</type>
</CustomField>