force-app/main/default/objects/Form_Builder_Settings__c/fields/C_Enable_Styling__c.field-meta.xml
<CustomField>
    <fullName>C_Enable_Styling__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Enables the Styling property panel in the Form Builder visual canvas, allowing per-question and per-form SLDS style configuration. When unchecked, the Styling section is hidden from the builder UI. Defaults to false (disabled).</description>
    <label>Enable Styling</label>
    <type>Checkbox</type>
</CustomField>