force-app/main/default/objects/Form_Builder_Settings__c/fields/C_Enable_Translations__c.field-meta.xml
<CustomField>
    <fullName>C_Enable_Translations__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Translations</label>
    <type>Checkbox</type>
</CustomField>